// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run can include files in gitignore with -I and file paths 1`] = `
"Optic matched 1 OpenAPI specification file:
openapi-local.yml

--------------------------------------------------------------------------------------------------

 ┌─────────────────────────────────┐
 │  [1]      Optic Cloud      [2]  │
 └───┬─────────────────────────▲───┘
     │Compare            Update│
 ┌───▼─────────────────────────┴───┐
 │           Local specs           │
 └─────────────────────────────────┘

 replaced line
 replaced line

--------------------------------------------------------------------------------------------------
Pass a GITHUB_TOKEN or OPTIC_GITLAB_TOKEN environment variable with write permission to let Optic post comment with API change summaries to your pull requests.


Uploading diff...
| [1ma spec[22m [openapi-local.yml]
| Report:  👁️  http://localhost:3001/organizations/org-id/apis/generated-api/runs/run-id
| Changes: 2 operations added, 1 removed
| Rules:   ✅ 5/5 passed
| Tests:   Set up API contract testing for this spec: https://www.useoptic.com/docs/verify-openapi


💬 Configure commenting on PR/MR: https://www.useoptic.com/docs/setup-ci#configure-commenting-on-pull-requests-optional
"
`;

exports[`run ignores files in gitignore 1`] = `
"Optic matched 1 OpenAPI specification file:
openapi.yml

--------------------------------------------------------------------------------------------------

 ┌─────────────────────────────────┐
 │  [1]      Optic Cloud      [2]  │
 └───┬─────────────────────────▲───┘
     │Compare            Update│
 ┌───▼─────────────────────────┴───┐
 │           Local specs           │
 └─────────────────────────────────┘

 replaced line
 replaced line

--------------------------------------------------------------------------------------------------
Pass a GITHUB_TOKEN or OPTIC_GITLAB_TOKEN environment variable with write permission to let Optic post comment with API change summaries to your pull requests.


Uploading diff...
| [1ma spec[22m [openapi.yml]
| Report:  👁️  http://localhost:3001/organizations/org-id/apis/generated-api/runs/run-id
| Changes: 2 operations added, 1 removed
| Rules:   ✅ 5/5 passed
| Tests:   Set up API contract testing for this spec: https://www.useoptic.com/docs/verify-openapi


💬 Configure commenting on PR/MR: https://www.useoptic.com/docs/setup-ci#configure-commenting-on-pull-requests-optional
"
`;

exports[`run runs and diffs against APIs and runs capture 1`] = `
"Optic matched 1 OpenAPI specification file:
openapi.yml

--------------------------------------------------------------------------------------------------

 ┌─────────────────────────────────┐
 │  [1]      Optic Cloud      [2]  │
 └───┬─────────────────────────▲───┘
     │Compare            Update│
 ┌───▼─────────────────────────┴───┐
 │           Local specs           │
 └─────────────────────────────────┘

 replaced line
 replaced line

--------------------------------------------------------------------------------------------------
Pass a GITHUB_TOKEN or OPTIC_GITLAB_TOKEN environment variable with write permission to let Optic post comment with API change summaries to your pull requests.


Uploading diff...
| [1ma spec[22m [openapi.yml]
| Report:  👁️  http://localhost:3001/organizations/org-id/apis/generated-api/runs/run-id
| Changes: 2 operations added, 1 removed
| Rules:   ⚠️  1/3 failed
| Tests:   🆕 5 undocumented paths ⚠️  1 mismatch


Errors were found: exiting with code 1. Disable this behaviour with the \`--severity none\` option.

💬 Configure commenting on PR/MR: https://www.useoptic.com/docs/setup-ci#configure-commenting-on-pull-requests-optional
"
`;
